@@ -1,0 +1,160 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!-- $Id$ -->
+
+<!--
+	This is the Solr schema file. This file should be named "schema.xml"
+	and should be in the conf directory under the solr home (i.e.
+	./solr/conf/schema.xml by default) or located where the classloader
+	for the Solr webapp can find it. For more information, on how to
+	customize this file, please see http://wiki.apache.org/solr/SchemaXml
+-->
+
+<!--
+	The schema name property is constructed as follows
+
+	tx_solr		- The extension key
+	x-y-z		- The extension version this schema is meant to work with
+	YYYYMMDD	- The date the schema file was changed the last time
+
+	When changing the schema the name property must be updated. There is a
+	status report - tx_solr_report_SchemaStatus - checking against this
+	name property, that status check must be updated as well.
+-->
+<schema name="tx_solr-2-5-0--20120214" version="1.4" >
+	<!-- attribute "name" is the name of this schema and is only used for display purposes.
+		Applications should change this to reflect the nature of the search collection.
+		version="1.4" is Solr's version number for the schema syntax and semantics.  It should
+		not normally be changed by applications.
+		1.0: multiValued attribute did not exist, all fields are multiValued by nature
+		1.1: multiValued attribute introduced, false by default
+		1.2: omitTermFreqAndPositions attribute introduced, true by default except for text fields.
+		1.3: removed optional field compress feature
+		1.4: default auto-phrase (QueryParser feature) to off
+	-->
+
+<!-- xinclude fields -->
+<xi:include href="../general_schema_types.xml" xmlns:xi="http://www.w3.org/2001/XInclude"/>
+
+<types>
+
+		<!-- A general text field that has reasonable, generic
+			cross-language defaults
+			-->
+		<fieldType name="text" class="solr.TextField" positionIncrementGap="100">
+			<analyzer type="index">
+				<tokenizer class="solr.StandardTokenizerFactory"/>
+
+				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="1" generateNumberParts="1" catenateWords="1" catenateNumbers="1" catenateAll="0" splitOnCaseChange="1" preserveOriginal="1"/>
+				<filter class="solr.SynonymFilterFactory" synonyms="generic/synonyms.txt" ignoreCase="true" expand="true"/>
+				<filter class="solr.StopFilterFactory"
+					ignoreCase="true"
+					words="generic/stopwords.txt"
+					enablePositionIncrements="true"
+				/>
+				<filter class="solr.LowerCaseFilterFactory"/>
+				<!-- no stemming -->
+				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
+			</analyzer>
+			<analyzer type="query">
+				<tokenizer class="solr.StandardTokenizerFactory"/>
+
+				<filter class="solr.WordDelimiterFilterFactory" generateWordParts="1"
+					generateNumberParts="1"
+					catenateWords="0"
+					catenateNumbers="0"
+					catenateAll="0"
+					splitOnCaseChange="1"
+					preserveOriginal="1"
+				/>
+				<filter class="solr.StopFilterFactory"
+					ignoreCase="true"
+					words="generic/stopwords.txt"
+					enablePositionIncrements="true"
+				/>
+				<filter class="solr.LowerCaseFilterFactory"/>
+				<!-- no stemming -->
+				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
+			</analyzer>
+		</fieldType>
+
+
+
+		<!-- Less flexible matching, but less false matches.	Probably not ideal for product names,
+			but may be good for SKUs.	Can insert dashes in the wrong place and still match. -->
+		<fieldType name="textTight" class="solr.TextField" positionIncrementGap="100" >
+			<analyzer>
+				<tokenizer class="solr.WhitespaceTokenizerFactory"/>
+
+				<filter class="solr.SynonymFilterFactory" synonyms="generic/synonyms.txt" ignoreCase="true" expand="false"/>
+				<filter class="solr.StopFilterFactory" ignoreCase="true" words="generic/stopwords.txt"/>
+				<filter class="solr.WordDelimiterFilterFactory"
+					generateWordParts="0"
+					generateNumberParts="0"
+					catenateWords="1" catenateNumbers="1"
+					catenateAll="0"
+					preserveOriginal="1"
+				/>
+				<filter class="solr.LowerCaseFilterFactory"/>
+				<!-- no stemming -->
+				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
+			</analyzer>
+		</fieldType>
+
+		<!-- Setup simple analysis for spell checking -->
+		<fieldType name="textSpell" class="solr.TextField" positionIncrementGap="100" omitNorms="true">
+			<analyzer type="index">
+				<tokenizer class="solr.StandardTokenizerFactory"/>
+
+				<filter class="solr.LowerCaseFilterFactory"/>
+				<filter class="solr.SynonymFilterFactory" synonyms="generic/synonyms.txt" ignoreCase="true" expand="true"/>
+				<filter class="solr.StopFilterFactory" ignoreCase="true" words="generic/stopwords.txt"/>
+				<filter class="solr.StandardFilterFactory" />
+				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
+			</analyzer>
+			<analyzer type="query">
+				<tokenizer class="solr.StandardTokenizerFactory" />
+
+				<filter class="solr.LowerCaseFilterFactory"/>
+				<filter class="solr.StopFilterFactory" ignoreCase="true" words="generic/stopwords.txt"/>
+				<filter class="solr.StandardFilterFactory" />
+				<filter class="solr.RemoveDuplicatesTokenFilterFactory"/>
+			</analyzer>
+		</fieldType>
+
+</types>
+
+<!--  xinclude fields-->
+<xi:include href="../general_schema_fields.xml" xmlns:xi="http://www.w3.org/2001/XInclude"/>
+	<!--
+		Field to use to determine and enforce document uniqueness. Unless this
+		field is marked with required="false", it will be a required field
+	-->
+	<uniqueKey>id</uniqueKey>
+
+	<!--
+		field for the QueryParser to use when an explicit fieldname is absent
+	-->
+	<defaultSearchField>content</defaultSearchField>
+
+	<!-- SolrQueryParser configuration: defaultOperator="AND|OR" -->
+	<solrQueryParser defaultOperator="AND" />
+
+	<!--
+		Similarity is the scoring routine for each document vs. a query. A
+		custom similarity may be specified here, but the default is fine for
+		most applications.
+	-->
+	<!--
+		<similarity class="org.apache.lucene.search.DefaultSimilarity"/>
+	-->
+	<!--
+		... OR ... Specify a SimilarityFactory class name implementation
+		allowing parameters to be used.
+	-->
+	<!--
+		<similarity class="com.example.solr.CustomSimilarityFactory"> <str
+		name="paramkey">param value</str> </similarity>
+	-->
+
+
+</schema>
